--- a/inrobin/Inrobin_careers.html
+++ b/inrobin/Inrobin_careers.html
@@ -10,12 +10,12 @@
   <header>
         <div id="logo" class="menuUp" >
           <h1>
-            <a style="text-decoration: none" href="index.html">
+            <a style="text-decoration: none" href="index.php">
                 <img id="navToggle" class="smicon" src="logo/logo.png" style="width: 200px;margin-top:7%">
             </a>
           </h1>
           <div id="navToggle" style="margin-top:2%;margin-right:3%">
-            <a href="index.html"><img id="menu" src="images/menu.png" style="margin-top:15%;margin-right:3%;width: 100px;"></a>
+            <a href="index.php"><img id="menu" src="images/menu.png" style="margin-top:15%;margin-right:3%;width: 100px;"></a>
           </div>
         </div>
 
@@ -173,7 +173,7 @@
 
 
 <footer>
-    <a href="index.html" style="padding: 0 100% 0 6%;width:100%;">
+    <a href="index.php" style="padding: 0 100% 0 6%;width:100%;">
         <img src="logo/logo.png" alt="Inrobin logo"  style="height:30px;margin-bottom: -0%;">
     </a>
 
