--- a/inrobin/Inrobin_company.html
+++ b/inrobin/Inrobin_company.html
@@ -252,7 +252,7 @@
             MANUFACTURERS
         </a>
 
-        <p class="subtitle" style="color: rgb(240, 75, 50);">
+        <p class="subtitle" style="color: rgb(240, 75, 50); width:100%;">
             Digital industrial & insurance manager
         </p>
     </div>
