--- a/inrobin/Inrobin_pulp.html
+++ b/inrobin/Inrobin_pulp.html
@@ -63,7 +63,7 @@
     </header>
 
 
-<div class="femte" style="background-image: url(images/biorefinery.jpg);background-repeat: no-repeat;">
+<div class="femtePulp" style="background-image: url(images/biorefinery.jpg);background-repeat: no-repeat;">
 
   <a class="negtitle">
      Biorefinery
