--- a/inrobin/Inrobin_company.html
+++ b/inrobin/Inrobin_company.html
@@ -28,7 +28,7 @@
                     <nav style="width:134px;margin-right:30%;">
                         <ul>
                             <li><a href="Inrobin_industries.html">Overview</a></li>
-                            <li><a href="Inrobin_pulp.html">Biorefinery</a></li>
+                            <li><a href="Inrobin_pulp.php">Biorefinery</a></li>
                         </ul>
                     </nav>
                 </li>
@@ -85,7 +85,8 @@
 
 <div class="sjette" id="solutions" style="padding-top:7%;">
 
-    <p class="textbox" style="width: 55%;float:left;">
+  <table class="textbox" style="width: 100%;">
+        <tbody><br><tr><td><p style="width: 100%;">
         By using Inrobin’s IIoT platform, manufacturers and insurers benefit from insurance and performance analytics
         after signing for an insurance contract.<br><br>
 
@@ -97,10 +98,13 @@
 
         If you are an insurer, broker or agent, benefit from a digital platform that connects directly to your
         industrial customer’s assets. You will contribute to improve their performance while cutting underwriting
-        time and expenditure and adjusting premiums that fit actual and future risks.
-    </p>
+        time and expenditure and adjusting premiums that fit actual and future risks.</p>
+      </td>
+      <td>
+        <img src="ourplatform.png" style="width: 400%;">
+      </td></tr></tbody>
+    </table>
 
-    <img src="ourplatform.png" style="width: 45%;padding:10% 0 10% 15%;float:left">
     <div style="text-align: center">
         <a href="#keyfeatures">
             <img src="images/svartpil.gif" style="width: 150px;">
