--- a/inrobin/Inrobin_industries.html
+++ b/inrobin/Inrobin_industries.html
@@ -27,7 +27,7 @@
                     <nav style="width:134px;margin-right:30%;">
                         <ul>
                             <li><a href="Inrobin_industries.html">Overview</a></li>
-                            <li><a href="Inrobin_pulp.html">Biorefinery</a></li>
+                            <li><a href="Inrobin_pulp.php">Biorefinery</a></li>
                         </ul>
                     </nav>
                 </li>
@@ -117,7 +117,7 @@
           This makes performance analytics highly valuable and increases the need to predict future behavior.
       </p>
 
-      <a class="negseemore" href="Inrobin_pulp.html"> Learn more</a>
+      <a class="negseemore" href="Inrobin_pulp.php"> Learn more</a>
 
   </div>
 
