--- a/inrobin/Inrobin_careers.html
+++ b/inrobin/Inrobin_careers.html
@@ -26,7 +26,7 @@
                     <nav style="width:134px;margin-right:30%;">
                         <ul>
                             <li><a href="Inrobin_industries.html">Overview</a></li>
-                            <li><a href="Inrobin_pulp.html">Biorefinery</a></li>
+                            <li><a href="Inrobin_pulp.php">Biorefinery</a></li>
                         </ul>
                     </nav>
                 </li>
