GET STARTED BUTTON

--- a/inrobin/Inrobin_about.html
+++ b/inrobin/Inrobin_about.html
@@ -7,7 +7,7 @@
 </head>
 <body id="body">
 
-  <header>
+  <header style = "position:relative">
         <div id="logo" class="menuUp" >
           <h1>
             <a style="text-decoration: none" href="index.php">
@@ -26,7 +26,7 @@
                     <nav style="width:134px;margin-right:30%;">
                         <ul>
                             <li><a href="Inrobin_industries.html">Overview</a></li>
-                            <li><a href="Inrobin_pulp.html">Biorefinery</a></li>
+                            <li><a href="Inrobin_pulp.php">Biorefinery</a></li>
                         </ul>
                     </nav>
                 </li>
@@ -53,12 +53,11 @@
                         </ul>
                     </nav>
                 </li>
-                <li><a href="Inrobin_contact.html">Contact&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-                <li><a class="orangetextbox" href="http://dashboard.inrobin.com">Get started</a></li>
+                <li><a href="#">Contact&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+                <li style = "margin-top: 1.2%;"><div class="dropdown3" ><a  href="http://dashboard.inrobin.com">Get started</a></div></li>
             </ul>
         </nav>
     </header>
-
 
 
 
