--- a/inrobin/Inrobin_company.html
+++ b/inrobin/Inrobin_company.html
@@ -9,7 +9,7 @@
 
 
 
-  <header>
+  <header style = "position:relative">
         <div id="logo" class="menuUp" >
           <h1>
             <a style="text-decoration: none" href="index.php">
@@ -56,7 +56,7 @@
                     </nav>
                 </li>
                 <li><a href="Inrobin_contact.html">Contact&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-                <li><a class="orangetextbox" href="http://dashboard.inrobin.com">Get started</a></li>
+                <li style = "margin-top: 1.2%;"><div class="dropdown3" ><a  href="http://dashboard.inrobin.com">Get started</a></div></li>
             </ul>
         </nav>
     </header>
@@ -83,10 +83,9 @@
 
 </div>-->
 
-<div class="sjette" id="solutions" style="padding-top:7%;">
+<div class="sjette" id="solutions" style="padding-top:2%;">
 
-  <table class="textbox" style="width: 100%;">
-        <tbody><br><tr><td><p style="width: 100%;">
+    <p class="textbox" style="width: 45%;float:left;">
         By using Inrobin’s IIoT platform, manufacturers and insurers benefit from insurance and performance analytics
         after signing for an insurance contract.<br><br>
 
@@ -98,19 +97,12 @@
 
         If you are an insurer, broker or agent, benefit from a digital platform that connects directly to your
         industrial customer’s assets. You will contribute to improve their performance while cutting underwriting
-        time and expenditure and adjusting premiums that fit actual and future risks.</p>
-      </td>
-      <td>
-        <img src="ourplatform.png" style="width: 400%;">
-      </td></tr></tbody>
-    </table>
+        time and expenditure and adjusting premiums that fit actual and future risks.
+    </p>
 
-    <div style="text-align: center">
-        <a href="#keyfeatures">
-            <img src="images/svartpil.gif" style="width: 150px;">
-        </a>
-    </div>
+    <img src="ourplatform.png" style="width: 40%;padding:10% 0 10% 15%;float:left">
 </div>
+
 
 
 
