--- a/inrobin/Inrobin_industries.html
+++ b/inrobin/Inrobin_industries.html
@@ -60,7 +60,7 @@
         </nav>
     </header>
 
-<div class="fjerde" id="solutions" style="text-align: center;background: linear-gradient(to left, rgb(50, 120, 117), rgb(0, 90, 90))">
+<div class="fjerde2" id="solutions" style="text-align: center;background: linear-gradient(to left, rgb(50, 120, 117), rgb(0, 90, 90))">
 
         <p class="negsmalltitle" style="width: 80%;">
             We enable predictive maintenance and insurance for industrial environments.
