--- a/inrobin/Inrobin_FAQs.html
+++ b/inrobin/Inrobin_FAQs.html
@@ -9,7 +9,7 @@
 <body>
 
 
-  <header style = "position:relative">
+  <header>
         <div id="logo" class="menuUp" >
           <h1>
             <a style="text-decoration: none" href="index.php">
