--- a/inrobin/Inrobin_company.html
+++ b/inrobin/Inrobin_company.html
@@ -9,7 +9,7 @@
 
 
 
-  <header style = "position:relative">
+  <header>
         <div id="logo" class="menuUp" >
           <h1>
             <a style="text-decoration: none" href="index.php">
@@ -83,7 +83,7 @@
 
 </div>-->
 
-<div class="sjette" id="solutions" style="padding-top:2%;">
+<div class="sjette" id="solutions" style="padding-top:6%;">
 
     <p class="textbox" style="width: 45%;float:left;">
         By using Inrobin’s IIoT platform, manufacturers and insurers benefit from insurance and performance analytics
