--- a/inrobin/Inrobin_industries.html
+++ b/inrobin/Inrobin_industries.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <header style = "position:relative">
+<header>
         <div id="logo" class="menuUp" >
           <h1>
             <a style="text-decoration: none" href="index.php">
@@ -284,7 +284,7 @@ $(document).ready(function(){
     // Make sure this.hash has a value before overriding default behavior
     if (this.hash !== "") {
       // Prevent default anchor click behavior
-      event.preventDefault();
+      //event.preventDefault();
 
       // Store hash
       var hash = this.hash;
