--- a/inrobin/Inrobin_careers.html
+++ b/inrobin/Inrobin_careers.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <header style = "position:relative">
+  <header>
         <div id="logo" class="menuUp" >
           <h1>
             <a style="text-decoration: none" href="index.php">
