--- a/inrobin/Inrobin_company.html
+++ b/inrobin/Inrobin_company.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Inrobin Company</title>
     <link rel="stylesheet" type="text/css" href="inrobinstyle.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico" />
 </head>
 <body>
 
