--- a/inrobin/Inrobin_about.html
+++ b/inrobin/Inrobin_about.html
@@ -8,15 +8,15 @@
 </head>
 <body id="body">
 
-  <header style = "position:relative">
+  <header>
         <div id="logo" class="menuUp" >
           <h1>
             <a style="text-decoration: none" href="index.php">
-                <img id="navToggle" class="smicon" src="logo/logo.png" style="width: 200px;margin-top:7%">
+                <img id="navToggle" class="smicon" src="logo/logo.png" style="width: 160px;margin-top:8%;margin-bottom:1%;">
             </a>
           </h1>
           <div id="navToggle" style="margin-top:2%;margin-right:3%">
-            <a href="index.php"><img id="menu" src="images/menu.png" style="margin-top:15%;margin-right:3%;width: 100px;"></a>
+            <a href="index.php"><img id="menu" src="images/menu.png" style="margin-top:0%;margin-right:3%;width: 100px;"></a>
           </div>
         </div>
 
@@ -54,8 +54,8 @@
                         </ul>
                     </nav>
                 </li>
-                <li><a href="#">Contact&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-                <li style = "margin-top: 1.2%;"><div class="dropdown3" ><a  href="http://dashboard.inrobin.com">Get started</a></div></li>
+                <li><a href="Inrobin_contact.html">Contact&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+                <li style = "margin-top: 1.1%;margin-bottom: 1%"><div class="dropdown3" ><a  href="http://dashboard.inrobin.com">Get started</a></div></li>
             </ul>
         </nav>
     </header>
@@ -593,7 +593,7 @@ $(document).ready(function(){
     // Make sure this.hash has a value before overriding default behavior
     if (this.hash !== "") {
       // Prevent default anchor click behavior
-      event.preventDefault();
+      //event.preventDefault();
 
       // Store hash
       var hash = this.hash;
