--- a/inrobin/Inrobin_careers.html
+++ b/inrobin/Inrobin_careers.html
@@ -12,11 +12,11 @@
         <div id="logo" class="menuUp" >
           <h1>
             <a style="text-decoration: none" href="index.php">
-                <img id="navToggle" class="smicon" src="logo/logo.png" style="width: 200px;margin-top:7%">
+                <img id="navToggle" class="smicon" src="logo/logo.png" style="width: 160px;margin-top:8%;margin-bottom:1%;">
             </a>
           </h1>
           <div id="navToggle" style="margin-top:2%;margin-right:3%">
-            <a href="index.php"><img id="menu" src="images/menu.png" style="margin-top:15%;margin-right:3%;width: 100px;"></a>
+            <a href="index.php"><img id="menu" src="images/menu.png" style="margin-top:0%;margin-right:3%;width: 100px;"></a>
           </div>
         </div>
 
@@ -55,10 +55,11 @@
                     </nav>
                 </li>
                 <li><a href="Inrobin_contact.html">Contact&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-                <li style = "margin-top: 1.2%;"><div class="dropdown3" ><a  href="http://dashboard.inrobin.com">Get started</a></div></li>
+                <li style = "margin-top: 1.1%;margin-bottom: 1%"><div class="dropdown3" ><a  href="http://dashboard.inrobin.com">Get started</a></div></li>
             </ul>
         </nav>
     </header>
+
 
 <div class="sjette">
     <p class="smalltitle">
@@ -305,7 +306,7 @@ $(document).ready(function(){
     // Make sure this.hash has a value before overriding default behavior
     if (this.hash !== "") {
       // Prevent default anchor click behavior
-      event.preventDefault();
+      //event.preventDefault();
 
       // Store hash
       var hash = this.hash;
