--- a/inrobin/Inrobin_industries.html
+++ b/inrobin/Inrobin_industries.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 
-<header>
+  <header>
         <div id="logo" class="menuUp" >
           <h1>
             <a style="text-decoration: none" href="index.php">
-                <img id="navToggle" class="smicon" src="logo/logo.png" style="width: 200px;margin-top:7%">
+                <img id="navToggle" class="smicon" src="logo/logo.png" style="width: 160px;margin-top:8%;margin-bottom:1%;">
             </a>
           </h1>
           <div id="navToggle" style="margin-top:2%;margin-right:3%">
-            <a href="index.php"><img id="menu" src="images/menu.png" style="margin-top:15%;margin-right:3%;width: 100px;"></a>
+            <a href="index.php"><img id="menu" src="images/menu.png" style="margin-top:0%;margin-right:3%;width: 100px;"></a>
           </div>
         </div>
 
@@ -56,7 +56,7 @@
                     </nav>
                 </li>
                 <li><a href="Inrobin_contact.html">Contact&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-                <li style = "margin-top: 1.2%;"><div class="dropdown3" ><a  href="http://dashboard.inrobin.com">Get started</a></div></li>
+                <li style = "margin-top: 1.1%;margin-bottom: 1%"><div class="dropdown3" ><a  href="http://dashboard.inrobin.com">Get started</a></div></li>
             </ul>
         </nav>
     </header>
