--- a/inrobin/Inrobin_FAQs.html
+++ b/inrobin/Inrobin_FAQs.html
@@ -10,9 +10,9 @@
 <body>
 
 
-  <header>
+<header>
         <div id="logo" class="menuUp" >
-          <h1>
+          <h1 >
             <a style="text-decoration: none" href="index.php">
                 <img id="navToggle" class="smicon" src="logo/logo.png" style="width: 160px;margin-top:8%;margin-bottom:1%;">
             </a>
@@ -62,47 +62,109 @@
         </nav>
     </header>
 
-
-
-
-
-
 <div id="faq" class="faq" >
-
-    <a class="titleWhite"  style="margin-top: 4%;">
-      FAQs
-    </a>
-
-    <a class="negsubtitle" style="width:100%">
-        Frequently Asked Questions
-    </a>
-
-
-    <div  style="text-align:center;overflow:hidden;margin-top:10%;">
-
-        <a class="threes" style="margin-left: 5%;" href="#about" >
-
-            <p  class="hoverboxW" style="width:100%;">
-                ABOUT THE PLATAFORM
-            </p>
+        <a class="titleFaqs"  style="float: left;line-height: 1.1;margin-top: 0%;">
+          Frequently <br>
+          Asked <br>
+          Questions
         </a>
-
-        <a class="threes" href="#trials">
-
-            <p class="hoverboxW" style="width:100%;">
-                TRIALS
-            </p>
+        <a href = "#indexFaq">
+          <img  src="images/logo_bird_question.png" style="width: 9%;float:right;margin-top: 25%;">
         </a>
+</div>
 
-        <a class="threes" href="#insurance">
-
-            <p class="hoverboxW" style="width:100%;">
-                INSURANCE
-            </p>
-        </a>
+<div id = "indexFaq" class="sjette" style="width:100%;"  >
+    <div style="width:31%;margin-left:2%;float:left; ">
+      <a class="subtitle"><big>ABOUT THE PLATAFORM</big></a>
+      <div style="margin-top:10%;">
+        <a class="threesfaqs" href="#faq1">
+          <p class="hoverboxfaqs" style="width:100%;">
+              What is Inrobin?</p><br></a>
+        <a class="threesfaqs" href="#faq2">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            What does the platform do?</p><br></a>
+        <a class="threesfaqs" href="#faq3">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            How does Inrobin protect and use my data?</p><br></a>
+        <a class="threesfaqs" href="#faq4">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            How can I contact Inrobin?</p><br></a>
+        <a class="threesfaqs" href="#faq5">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            How do I connect a machine?</p><br></a>
+        <a class="threesfaqs" href="#faq6">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            I have forgotten my password. What should I do?</p><br></a>
+        <a class="threesfaqs" href="#faq7">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            How do I amend information to one of my machines?</p><br></a>
+        <a class="threesfaqs" href="#faq8">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            Which functionalities will be implemented in the future?</p><br></a>
+        <a class="threesfaqs" href="#faq9">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            Where can I find a demonstration of the platform?</p><br></a>
+        <a class="threesfaqs" href="faq10#">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            What are the differences between users?</p><br></a>
+      </div>
+    </div>
+    <div style="width:31%;margin-left:2%;float:left">
+      <a class="subtitle"><big>TRIALS</big></a>
+      <div style="margin-top:10%;">
+        <a class="threesfaqs" href="#faq11">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            What is a trial?<br></p></a>
+        <a class="threesfaqs" href="#faq12">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            What happens if my machine is not IIoT enabled yet?<br></p></a>
+        <a class="threesfaqs" href="#faq13">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            How do I provide data for the trial? Do I have to connect my machine?<br></p></a>
+        <a class="threesfaqs" href="#faq14">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            What is the benefit for participating in the trial?<br></p></a>
+        <a class="threesfaqs" href="#faq15">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            How do I start the trial?<br></p></a>
+        <a class="threesfaqs" href="#faq16">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            How long does the trial last?<br></p></a>
+        <a class="threesfaqs" href="#faq17">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            What happens after the period ends?<br></p></a>
+        <a class="threesfaqs" href="#faq18">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            Are the trials totally free of charge?</p></a>
+      </div>
+    </div>
+    <div style="width:31%;margin-left:2%;float:left">
+      <a class="subtitle"><big>INSURANCE</big></a>
+      <div style="margin-top:10%;">
+        <a class="threesfaqs" href="#faq19">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            What affects my premium?/ How are premiums calculated?<br></p></a>
+        <a class="threesfaqs" href="#faq20">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            Who is insuring my machine?<br></p></a>
+        <a class="threesfaqs" href="#faq21">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            Which risks are covered by Inrobin?<br></p></a>
+        <a class="threesfaqs" href="#faq22">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            Can I let my machine insured even when it is not connected?<br></p></a>
+        <a class="threesfaqs" href="#faq23">
+          <p  class="hoverboxfaqs" style="width:100%;">
+            How does the balance work? What if my gross profit turned lower this year?<br></p></a>
+      </div>
     </div>
 </div>
 
+<a href="#indexFaq" style="text-decoration: none">
+    <button class="button button3" id="myBtn">
+          Index
+    </button>
+</a>
 
 
 <div class="fjerde" id="about">
@@ -112,7 +174,7 @@
         </p></center></small></small>
 
         <table class="textboxW" cellpadding="15px" style="width:100%;">
-              <tbody><br><tr><td><b><big>What is Inrobin?</big></b>
+              <tbody><br><tr id = "faq1"><td><b><big>What is Inrobin?</big></b>
 
                 <br><br><p class = "minimize" >Inrobin is a digital IIoT platform that connects industrial clients with insurance
                     companies and uses machine learning techniques in order to identify risks, predict future outcomes
@@ -120,7 +182,7 @@
                     is processed and insights provided to the users.</p></td>
 
               </tr>
-              <tr><td><br><b><big>What does the platform do?</big></b>
+              <tr id = "faq2"><td><br><b><big>What does the platform do?</big></b>
 
                 <br><br><p class = "minimize" >Inrobin has trained its machine learning algorithms using industrial data sets
                 and achieved an accuracy in detecting breakdown with <b> more than </b> 80%.
@@ -128,7 +190,7 @@
                 to predict the near future (up to a day). For each prediction, the confidence interval
                 (the range in which the future value will fall with a probability of 95% percent) is given.</p></td>
               </tr>
-              <tr><td><br><b><big>How does Inrobin protect and use my data?</big></b>
+              <tr id = "faq3"><td><br><b><big>How does Inrobin protect and use my data?</big></b>
                   <br><br><p class = "minimize" >Inrobin puts a lot of effort in the safety and security of its client’s data. We use
                   the latest standards to be compliant with regulation. Learn more at <a href="https://wwwinrobin.com/privacy">inrobin.com/privacy</a>
 
@@ -137,7 +199,7 @@
                   and safety and can only see the information inputted in the registration process.
                   The rest is automatized and is only processed by the algorithms of Inrobin.</p></td>
                   </tr>
-                  <tr>
+                  <tr id = "faq4">
                 <td><b><br><big>How can I contact Inrobin?</big></b>
 
                 <br><br><p class = "minimize" >Inrobin is always available via mail hello@inrobin.com. In the future, we plan the integration
@@ -146,7 +208,7 @@
                 you or someone from your company.<br><br><br><br></p></td>
 
               </tr>
-              <tr><td><b><br><big>How do I connect a machine?</big></b>
+              <tr id = "faq5"><td><b><br><big>How do I connect a machine?</big></b>
 
                 <br><br><p class = "minimize" >Machines can be connected in different ways. Currently, Inrobin allows the connection of machinery
                 to its platform via MQTT or API. In the near future, we plan to expand the possibilities by
@@ -162,30 +224,30 @@
 
 
               </tr>
-              <tr><td><b><br><big>I have forgotten my password. What should I do?</big></b>
+              <tr id = "faq6"><td><b><br><big>I have forgotten my password. What should I do?</big></b>
                 <br><br><p class = "minimize" >Users can reset their password by clicking on the button Forgotten password in the Inrobin Log in page.
                   An email is sent to the mail account used for registration. Accounts not previously registered will not be recognised.</p></td>
 
 
               </tr>
-              <tr><td><b><br><big>How do I amend information to one of my machines?</big></b>
+              <tr id = "faq7"><td><b><br><big>How do I amend information to one of my machines?</big></b>
                 <br><br><p class = "minimize" >If the information is outdated or not correct anymore, it can be amended by clicking on the gearwheel
                   next to the machine name (left navigation bar). You can choose ‘Edit machine details’ to change information such as machine name,
                   type of connection, etc.</p></td>
               </tr>
-              <tr><td><b><br><big>Which functionalities will be implemented in the future?</big></b>
+              <tr id = "faq8"><td><b><br><big>Which functionalities will be implemented in the future?</big></b>
                 <br><br><p class = "minimize" >Inrobin is expanding the functionalities of its platform continuously and assessing the needs of its
                    users in order to provide the best possible solutions to the problems industrials are facing today.
                   <br><br>Inrobin invites its users to point out problems and give suggestions for future applications.
                   Your feedback will help us to improve! Send your suggestions to hello@inrobin.com or contact a member of the team.
                  </p></td>
               </tr>
-              <tr><td><b><br><big>Where can I find a demonstration of the platform? Can I find schedule a demonstration?</big></b>
+              <tr id = "faq9"><td><b><br><big>Where can I find a demonstration of the platform? Can I find schedule a demonstration?</big></b>
                 <br><br><p class = "minimize" >Inrobin is currently looking to connect with industrial companies and tests the models it has developed.
                   Send us an email to hello@inrobin.com and we will arrange a demonstration with you or a member of your company.</p></td>
               </tr>
 
-              <tr><td><b><br><big>What are the differences between users (Technician, Manager, Administrator)?</big></b>
+              <tr id = "faq10"><td><b><br><big>What are the differences between users (Technician, Manager, Administrator)?</big></b>
                 <br><br><p class = "minimize" >Inrobin has three different user profiles for its platform: Technician, Manager and Administrator.
                 The different user profiles differ in the access authority and rights and are set when
                 creating a new user. Here is a table with the different rights:</p></td>
@@ -267,20 +329,20 @@
         </p></center>
 
         <table class="textbox" cellpadding="15px" style="width:100%;">
-              <tbody><tr><td><b><br><big>What is a trial?</big></b>
+              <tbody><tr id = "faq11"><td><b><br><big>What is a trial?</big></b>
 
                 <br><br><p class = "minimizeB" >Inrobin is offering industrial companies test the platform. This is a unique possibility
                 to connect their machinery for free and provide industrial
                 data to the platform in order to gain new insights about their industrial processes provided.</p></td>
 
               </tr>
-              <tr><td><b><br><big>What happens if my machine is not IIoT enabled yet?</big></b>
+              <tr id = "faq12"><td><b><br><big>What happens if my machine is not IIoT enabled yet?</big></b>
 
                 <br><br><p class = "minimizeB" >Contact us to hello@inrobin.com and we will try to find a solution for your company and
                 assets. Meanwhile, you can sign up into the platform and upload performance
                 data manually. This will be equally assessed by our algorithms.</p></td>
               </tr>
-              <tr><td><b><br><big>How do I provide data for the trial? Do I have to connect my machine?</big></b>
+              <tr id = "faq13"><td><b><br><big>How do I provide data for the trial? Do I have to connect my machine?</big></b>
 
                 <br><br><p class = "minimizeB" >In the insurance section the user can upload documents on the machine and the process.
                 There, png .jpg .pdf .csv .xls .xlsx .txt documents containing performance data or documents
@@ -289,7 +351,7 @@
 
 
               </tr>
-              <tr><td><b><br><big>What is the benefit for participating in the trial?</big></b>
+              <tr id = "faq14"><td><b><br><big>What is the benefit for participating in the trial?</big></b>
                   <br><br><p class = "minimizeB" >Inrobin has developed unique industrial machine learning algorithms.
                   These algorithms can be used equally to identify anomalies in the process,
                   identify risks and predict breakdowns for industrial processes.
@@ -299,11 +361,11 @@
                   quotation. If you sign up for trials
                   your company will benefit from preferred treatment once the platform is open to a wider audience.</p></td>
                   </tr>
-              <tr><td><b><br><big>How do I start the trial?</big></b>
+              <tr id = "faq15"><td><b><br><big>How do I start the trial?</big></b>
                 <br><br><p class = "minimizeB" >Simply get in touch at hello@inrobin.com and ask for a trial.
                 A team member will provide you with the password for accessing to the sign up page.</p></td>
               </tr>
-              <tr><td><b><br><big>How long does the trial last?</big></b>
+              <tr id = "faq16"><td><b><br><big>How long does the trial last?</big></b>
 
                     <br><br><p class = "minimizeB" >Inrobin will process the data coming from the machine using its machine learning
                     algorithms over a three-month period.
@@ -313,14 +375,14 @@
                     needed or problems during sign up are identified.</p></td>
 
               </tr>
-              <tr><td><br><b><big>What happens after the period ends?</big></b>
+              <tr id = "faq17"><td><br><b><big>What happens after the period ends?</big></b>
                 <br><br><p class = "minimizeB" >You will be able to judge by yourself and keep benefiting from our platform’s insights and
                 insurance management tool. If so, we will be happy to offer your company a special
                 price as first movers along with a real insurance coverage.</p></td>
 
 
               </tr>
-              <tr><td><b><br><big>Are the trials totally free of charge?</big></b>
+              <tr id = "faq18"><td><b><br><big>Are the trials totally free of charge?</big></b>
 
                 <br><br><p class = "minimizeB" >The trials are conducted for free for the full period of three months since registration.
                 Aft this period, if the user wishes to continue benefiting from the services provided
@@ -623,5 +685,74 @@ $(document).ready(function() {
     });
 });
 </script>
+
+<script>
+// HASH FOR HREF + HASH FOR MENU BAR
+    // The function actually applying the offset
+    function offsetAnchor() {
+      if (location.hash.length !== 0) {
+        window.scrollTo(window.scrollX, window.scrollY - 100);
+      }
+    }
+
+    // Captures click events of all <a> elements with href starting with #
+    $(document).on('click', 'a[href^="#"]', function(event) {
+      // Click events are captured before hashchanges. Timeout
+      // causes offsetAnchor to be called after the page jump.
+      window.setTimeout(function() {
+        offsetAnchor();
+      }, 0);
+    });
+
+    // Set the offset when entering page with hash present in the url
+    window.setTimeout(offsetAnchor, 0);
+</script>
+
+<script>
+//SEE MORE BUTTON
+      $(document).ready(function(){
+
+            var list = $(".div a");
+            var numToShow = 3;
+            var button = $("#next");
+            var numInList = list.length;
+            list.hide();
+            if (numInList > numToShow) {
+              button.show();
+            }
+            list.slice(0, numToShow).show();
+
+            button.click(function(){
+                var showing = list.filter(':visible').length;
+                list.slice(showing - 1, showing + numToShow).fadeIn();
+                var nowShowing = list.filter(':visible').length;
+                if (nowShowing >= numInList) {
+                  button.hide();
+                }
+            });
+
+      });
+</script>
+
+<script>
+// BUTTON INDEX UP
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 1100 || document.documentElement.scrollTop > 1100) {
+        document.getElementById("myBtn").style.display = "block";
+    } else {
+        document.getElementById("myBtn").style.display = "none";
+    }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+    document.body.scrollTop = 600;
+    document.documentElement.scrollTop = 600;
+}
+</script>
+
 </body>
 </html>
