--- a/inrobin/Inrobin_about.html
+++ b/inrobin/Inrobin_about.html
@@ -279,45 +279,39 @@
 
         </div>
 
-        <div class="container" onclick="showHide('vinfo')">
-            <div class="info" id="vinfo">
-                <button type="button" class="seemore" onclick="showOpac('Valeria')"
+        <div class="container" onclick="showHide('dinfo')">
+            <div class="info" id="dinfo">
+                <button type="button" class="seemore" onclick="showOpac('David')"
                         style="float:right;padding:0;margin:0;width:10%;">
                     <a style="font-family: roboto-thin;" > x </a>
                 </button>
                 <div style="width:80%;text-align:left;float:left;">
                     <a class="textbox" style="width:100%">
-                        Valeria Fossati
+                        David Fernández García
                     </a>
                     <a class="textbox" style="width:100%;font-family:roboto-thin;color: rgb(136, 136, 136);">
-                        Marketing Officer
+                        Software Developer
                     </a>
                 </div>
                 <p class="textbox" style="width: 100%;font-size:15px;line-height: 1.3;">
-                    Valeria creates the media content, image and communication of Inrobin. Her kindness is our
-                    haven of peace in moments of crisis. Prior to Inrobin she worked for
-                    fragrance producer Puig and Spanish media.
+
                 </p>
 
                 <div style="margin-left:75%;margin-top:12%;bottom:2%;">
-                    <a style="text-decoration: none;" href="https://www.linkedin.com/in/valeriafossati">
+                    <a style="text-decoration: none;" href="https://www.linkedin.com/in/david-fernandez-garcia-233261132/">
                         <img src="linkedin.png" style="width:25px;margin-bottom: 30%;">
-                    </a>
-
-                    <a style="text-decoration: none;" href="https://twitter.com/vfFossati">
-                        <img src="twitter.png" style="width:25px;margin-bottom:30%;margin-left:10%;">
                     </a>
                 </div>
             </div>
 
-            <div id="Valeria">
-                <img src="portraits/valeria.jpeg" alt="Avatar" class="image">
+            <div id="David">
+                <img src="portraits/david.png" alt="Avatar" class="image">
                     <div class="text">
                         <p style="width:100%;margin:0;padding:0;font-family:roboto-light;color:rgb(0, 90, 90);">
-                            Valeria Fossati
+                            David Fernández
                         </p>
                         <p style="width:100%;font-family:roboto-thin;margin:0;padding:0">
-                            Marketing Officer
+                            Software Developer
                         </p>
                     </div>
             </div>
@@ -373,7 +367,7 @@
 
         <div class="container" onclick="showHide('aninfo')">
             <div class="info" id="aninfo">
-                <button type="button" class="seemore" onclick="showOpac('Minerva')"
+                <button type="button" class="seemore" onclick="showOpac('Anxo')"
                         style="float:right;padding:0;margin:0;width:10%;">
                     <a style="font-family: roboto-thin;" > x </a>
                 </button>
@@ -417,6 +411,47 @@
             </div>
 
         </div>
+
+        <div class="container" onclick="showHide('andinfo')">
+            <div class="info" id="andinfo">
+                <button type="button" class="seemore" onclick="showOpac('Andre')"
+                        style="float:right;padding:0;margin:0;width:10%;">
+                    <a style="font-family: roboto-thin;" > x </a>
+                </button>
+                <div style="width:80%;text-align:left;float:left;">
+                    <a class="textbox" style="width:100%">
+                        André Faroni
+                    </a>
+                    <a class="textbox" style="width:100%;font-family:roboto-thin;color: rgb(136, 136, 136);">
+
+                    </a>
+                </div>
+                <p class="textbox" style="width: 100%;font-size:15px;line-height: 1.3;">
+
+                </p>
+
+                <div style="margin-left:75%;margin-top:12%;bottom:2%;">
+                    <a style="text-decoration: none;" href="https://www.linkedin.com/in//">
+                        <img src="linkedin.png" style="width:25px;margin-bottom: 30%;">
+                    </a>
+                </div>
+            </div>
+
+            <div id="Andre">
+                <img src="portraits/andre.png" alt="Avatar" class="image">
+                    <div class="text">
+                        <p style="width:100%;margin:0;padding:0;font-family:roboto-light;color:rgb(0, 90, 90);">
+                            André Faroni
+                        </p>
+                        <p style="width:100%;font-family:roboto-thin;margin:0;padding:0">
+
+                        </p>
+                    </div>
+            </div>
+
+        </div>
+
+
 
 </div>
 
