--- a/inrobin/Inrobin_company.html
+++ b/inrobin/Inrobin_company.html
@@ -91,7 +91,7 @@
         By using Inrobin’s IIoT platform, manufacturers and insurers benefit from insurance and performance analytics
         after signing for an insurance contract.<br><br>
 
-        If you are a manufacturer, you can connect your machinery to our MQTT Broker (or we connect to yours!)
+        If you are a manufacturer, you can connect your machinery through OPC-UA or to our MQTT Broker (or we connect to yours!)
         while applying for a new insurance. Our engineering team has developed the appropriate tools to valuate
         the risks and enable fitting machinery breakdown & Machinery Loss of Profit (MLoP) insurances. The tool
         will allow your company to get adjusted premiums and real-time analytics on
